[gd_scene load_steps=9 format=2]

[ext_resource path="res://GAME MAPAS/Scripts/baumid.gd" type="Script" id=1]
[ext_resource path="res://GAME MAPAS/itens/New Piskel (3).png" type="Texture" id=2]
[ext_resource path="res://GAME MAPAS/itens/New Piskel (2).png" type="Texture" id=3]
[ext_resource path="res://Sounds/mixkit-door-key-in-door-lock-2842.wav" type="AudioStream" id=4]
[ext_resource path="res://pixil-frame-0 (2).png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), null ],
"loop": false,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "aberto",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 13 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.29897, 6.52381 )

[node name="baumid" type="Area2D"]
collision_layer = 2147483648
collision_mask = 2147483648
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "aberto"
__meta__ = {
"_edit_group_": true
}

[node name="Collision_bau" type="CollisionShape2D" parent="."]
position = Vector2( 0.005, 1.526 )
scale = Vector2( 0.615, 0.495 )
shape = SubResource( 2 )

[node name="Open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Area_cafe" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 2147483648

[node name="cafe" type="Sprite" parent="Area_cafe"]
visible = false
position = Vector2( -21, -15 )
texture = ExtResource( 5 )

[node name="CollisionItemM" type="CollisionShape2D" parent="Area_cafe"]
position = Vector2( -16, 5 )
scale = Vector2( 0.303125, 0.328125 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -17.0
margin_top = -25.0
margin_right = 23.0
margin_bottom = -11.0

[connection signal="body_entered" from="." to="." method="_on_bau_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_bau_body_exited"]
[connection signal="body_entered" from="Area_cafe" to="." method="_on_Area_cafe_body_entered"]
